--- a/proyecto_rec/package.json
+++ b/proyecto_rec/package.json
@@ -13,6 +13,7 @@
     "@playwright/test": "^1.50.1",
     "@serenity-js/core": "^3.31.8",
     "@serenity-js/playwright": "^3.31.8",
+    "@serenity-js/playwright-test": "^3.31.8",
     "playwright": "^1.50.1"
   }
 }
